<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SaveMoneyActivity!</string>
    <string name="app_name">티끌모아 태산</string>
    <string name="ewhapp">Ewha Appcenter</string>
    <string name="app_id">109466259211773</string>
    <string name="app_title">지름확인서</string>
    <string name="txt_addGoal">목표 추가</string>
    <string name="txt_signal_add">+</string>
    <string name="txt_whatGoal">당신이 원하는 목표는?</string>
    <string name="txt_goalMoney">목표금액 : </string>
    <string name="txt_goalRate">0%</string>
    <string name="txt_won"> 원</string>
    <string name="txt_confirmGoalReset">벌써 또 다른 지름을?</string>
    <string name="txt_changeGoal">목표 변경</string>
    <string name="txt_retainGoal">목표 유지</string>
    <string name="txt_whatSaveObject">어떤 것을 아끼고 싶으신가요?</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success.</string>
    <string name="successfully_posted_post">포스트를 성공하였습니다.</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
</resources>